--- a/Reflection1.html
+++ b/Reflection1.html
@@ -56,9 +56,15 @@
 						<li><a href="Reflection1.html">Activity#1</a></li>
 						<li><a href="Reflection2.html">Activity#2</a></li>
 						<li><a href="Reflection3.html">Activity#3</a></li>
+						<li><a href="Reflection4.html">Activity#4</a></li>
+						<li><a href="Reflection6.html">Activity#6</a></li>
+						<li><a href="Reflection7.html">Activity#7</a></li>
 						<li><a href="ZZ.html">Reflection#1</a></li>
 						<li><a href="ZZZ.html">Reflection#2</a></li>
 						<li><a href="ZZZZ.html">Reflection#3</a></li>
+						<li><a href="ZZZZZ.html">Reflection#4</a></li>
+						<li><a href="ZZZZZZ.html">Reflection#5</a></li>
+						<li><a href="ZZZZZZZ.html">Reflection#6</a></li>
 					</ul>
 				</nav>
 
