--- a/Reflection4.html
+++ b/Reflection4.html
@@ -17,7 +17,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Portfolio</strong></a>
+									<a href="index.html" class="logo"><strong>My Portfolio</strong></a>
 									<ul class="icons">
 										<li><a href="https://twitter.com/tonnastr" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.facebook.com/25clifford.austria/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -28,17 +28,35 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>PROTOTYPE</h1>
+										<h1>Activity</h1>
 									</header>
 
-									<span class="image main"><img src="prototype1.jpg" alt="" /></span>
+									<span class="image main"><img src="Act1.jpg" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype2.jpg" alt="" /></span>
-									<hr class="major" />
-									<span class="image main"><img src="prototype3.jpg" alt="" /></span>
-									<hr class="major" />
-									<span class="image main"><img src="prototype4.jpg" alt="" /></span>
-									<hr class="major" />
+									<h2>Invitation Design Activity</h2>
+									<h2> How can we improve this?</hr><br>
+									<p>It is easy to make an invitation card. Address the person you are inviting with your card,
+										name the event you are inviting them to, spell out the date , time and place, provide a contact
+										number so that they can know that they are in the right place. It must be simple and
+										understandable when creating an invitational card, but it is also straight to the point as much as
+										possible. When creating an invitational card, here are the following steps:
+										</p><br>
+									<p>1st step: You should first find a template that is good for the eyes when creating an
+										invitational card.<br>
+										2nd Step: Know your attendees<br>
+										3rd step: Be specific when giving a date and time so that when they show up, the
+										participants are aware.<br>
+										4th step: An address is always inserted within the invitation card so that the attendees
+										know where they are going.<br>
+										5th step: Make as simple as possible and understandable</p>br?
+									<h2>What would be the objective function?</h2><br>
+									<p>The intention of the passage is to know the targeted respondents invited in the invitation,
+										the passage will tell us that this is the after-dinner party and the wine of Robert and Alexandra.
+										This will be revealed on Saturday night at 9:30 pm on 1 June.
+										The aim of this invitation is to acknowledge that you are one of the participants and also
+										to inform you about the things that will happen during Robert and Alexandra's dinner party.</p><br>
+									<h2>Create your own design/version of the passage</h2>
+									<span class="image main"><img src="Invitation.JPG" alt="" /></span>
 
 
 		<!-- Sidebar -->
