--- a/Reflection4.html
+++ b/Reflection4.html
@@ -34,13 +34,13 @@
 									<span class="image main"><img src="Act1.jpg" alt="" /></span>
 									<hr class="major" />
 									<h2>Invitation Design Activity</h2>
-									<h2> How can we improve this?</hr><br>
+									<h2> How can we improve this?</hr>
 									<p>It is easy to make an invitation card. Address the person you are inviting with your card,
 										name the event you are inviting them to, spell out the date , time and place, provide a contact
 										number so that they can know that they are in the right place. It must be simple and
 										understandable when creating an invitational card, but it is also straight to the point as much as
 										possible. When creating an invitational card, here are the following steps:
-										</p><br>
+										</p>
 									<p>1st step: You should first find a template that is good for the eyes when creating an
 										invitational card.<br>
 										2nd Step: Know your attendees<br>
@@ -48,13 +48,13 @@
 										participants are aware.<br>
 										4th step: An address is always inserted within the invitation card so that the attendees
 										know where they are going.<br>
-										5th step: Make as simple as possible and understandable</p>br?
-									<h2>What would be the objective function?</h2><br>
+										5th step: Make as simple as possible and understandable</p></br>
+									<h2>What would be the objective function?</h2>
 									<p>The intention of the passage is to know the targeted respondents invited in the invitation,
 										the passage will tell us that this is the after-dinner party and the wine of Robert and Alexandra.
 										This will be revealed on Saturday night at 9:30 pm on 1 June.
 										The aim of this invitation is to acknowledge that you are one of the participants and also
-										to inform you about the things that will happen during Robert and Alexandra's dinner party.</p><br>
+										to inform you about the things that will happen during Robert and Alexandra's dinner party.</p>
 									<h2>Create your own design/version of the passage</h2>
 									<span class="image main"><img src="Invitation.JPG" alt="" /></span>
 
