--- a/Reflection4.html
+++ b/Reflection4.html
@@ -33,15 +33,14 @@
 
 									<span class="image main"><img src="Act1.jpg" alt="" /></span>
 									<hr class="major" />
-									<h2>Invitation Design Activity</h2>
+									<h2>Invitation Design Activity</h2><br>
 									<h2> How can we improve this?</hr>
 									<p>It is easy to make an invitation card. Address the person you are inviting with your card,
 										name the event you are inviting them to, spell out the date , time and place, provide a contact
 										number so that they can know that they are in the right place. It must be simple and
 										understandable when creating an invitational card, but it is also straight to the point as much as
-										possible. When creating an invitational card, here are the following steps:
-										</p>
-									<p>1st step: You should first find a template that is good for the eyes when creating an
+										possible. When creating an invitational card, here are the following steps:<br>
+										1st step: You should first find a template that is good for the eyes when creating an
 										invitational card.<br>
 										2nd Step: Know your attendees<br>
 										3rd step: Be specific when giving a date and time so that when they show up, the
