--- a/Reflection4.html
+++ b/Reflection4.html
@@ -34,7 +34,7 @@
 									<span class="image main"><img src="Act1.jpg" alt="" /></span>
 									<hr class="major" />
 									<h2>Invitation Design Activity</h2><br>
-									<h2> How can we improve this?</h2>
+									<p>How can we improve this?</p>
 									<p>It is easy to make an invitation card. Address the person you are inviting with your card,
 										name the event you are inviting them to, spell out the date , time and place, provide a contact
 										number so that they can know that they are in the right place. It must be simple and
