--- a/Reflection4.html
+++ b/Reflection4.html
@@ -31,7 +31,7 @@
 										<h1>Activity</h1>
 									</header>
 
-									<span class="image main"><img src="Act1.jpg" alt="" /></span>
+									<span class="image main"><img src="dinner.jpg" alt="" /></span>
 									<hr class="major" />
 									<h2>Invitation Design Activity</h2><br>
 									<p>How can we improve this?</p>
