--- a/Reflection6.html
+++ b/Reflection6.html
@@ -28,18 +28,17 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>PROTOTYPE</h1>
+										<h1>GAMES</h1>
 									</header>
 
-									<span class="image main"><img src="prototype1.jpg" alt="" /></span>
+									<span class="image main"><img src="Game1.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype2.jpg" alt="" /></span>
+									<span class="image main"><img src="Game2.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype3.jpg" alt="" /></span>
+									<span class="image main"><img src="Game3.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype4.jpg" alt="" /></span>
+									<span class="image main"><img src="Game4.JPG" alt="" /></span>
 									<hr class="major" />
-
 
 		<!-- Sidebar -->
 		<div id="sidebar">
