--- a/Reflection7.html
+++ b/Reflection7.html
@@ -30,16 +30,24 @@
 									<header class="main">
 										<h1>PROTOTYPE</h1>
 									</header>
-
-									<span class="image main"><img src="prototype1.jpg" alt="" /></span>
+									
+									<span class="image main"><img src="typography.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype2.jpg" alt="" /></span>
+									<h2>typography</h2>
+									<span class="image main"><img src="color.JPG" alt="" /></span>
+									<span class="image main"><img src="coloor.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype3.jpg" alt="" /></span>
+									<h2>Color Palette</h2>
+									<span class="image main"><img src="navi.JPG" alt="" /></span>
 									<hr class="major" />
-									<span class="image main"><img src="prototype4.jpg" alt="" /></span>
+									<h2>Global Navigation for Personal Website (Home, Activities, Reflections, Learning’s,
+										Guide Questions)</h2>
+									<span class="image main"><img src="navi.JPG" alt="" /></span>
+									<span class="image main"><img src="Ac.JPG" alt="" /></span>
+									<span class="image main"><img src="homepage.JPG" alt="" /></span>
+									<span class="image main"><img src="coloor.JPG" alt="" /></span>
 									<hr class="major" />
-
+									<h2>Updated Home Screen Design using 1&2</h2>
 
 		<!-- Sidebar -->
 		<div id="sidebar">
