--- a/Reflection7.html
+++ b/Reflection7.html
@@ -38,13 +38,13 @@
 									<span class="image main"><img src="coloor.JPG" alt="" /></span>
 									<hr class="major" />
 									<h2>Color Palette</h2>
-									<span class="image main"><img src="navi.JPG" alt="" /></span>
+									<span class="image main"><img src="navi.JPG" width="60" height="70" alt="" /></span>
 									<hr class="major" />
 									<h2>Global Navigation for Personal Website (Home, Activities, Reflections, Learning’s,
 										Guide Questions)</h2>
 									<span class="image main"><img src="navi.JPG" alt="" /></span>
 									<span class="image main"><img src="Ac.JPG" alt="" /></span>
-									<span class="image main"><img src="homepage.JPG" alt="" /></span>
+									<span class="image main"><img src="homepage.JPG" width="100" height="70" alt="" /></span>
 									<span class="image main"><img src="coloor.JPG" alt="" /></span>
 									<hr class="major" />
 									<h2>Updated Home Screen Design using 1&2</h2>
