--- a/ZZZZZ.html
+++ b/ZZZZZ.html
@@ -30,12 +30,32 @@
 									<header class="main">
 										<h1>REFLECTION</h1>
 									</header>
-									<span class="image main"><img src="qq.jpg" alt="" /></span>
+									<span class="image main"><img src="archi.jpg" alt="" /></span>
 									<hr class="major" />
-									<h2>Group Project, Design Problem Statement, and Experience Mapping</h2>
-									<p>Our focus is all about how, through this pandemic, to earn money. How we will help students find an alternate work so that they can still acquire the items they want to help their families. To get a developed right about this initiative, we get done a lot of research that we can do and produce it as best as we can. The main reason we chose this topic is that, without doing nothing, many students have a lot of time, which is why we want to help them raise money for their future.</p>
-									<p>The first thing we do is give each other feedback to get a clear understanding about how this project could be developed. After that, we can quickly build the targets we like, etc. Even if our internet access is still not that good, we always have something that can benefit each one of us. Because of the idea that we have we can easily create a good quality of work, also having a feedback in the other group about our project that give us an idea on what we should improve about our project. </p>
-									<p>Our problem statement, the team thinks the pandemic affected the students greatly in terms of income, and students are not able to physically go to job interviews and find job opportunities. Having the internet and media as the only source of information, students try different ways to find a source of income. </p>
+									<h2>INFORMATION ARCHITECTURE</h2>
+									<p>The architecture of knowledge is the collection of ideas on how to philosophically handle
+										all knowledge in each context and, in a general way, how to arrange it. The primary aim of this is
+										to provide users with activities and tasks. You need to understand how the pieces fit together to
+										do this and how the objects inside the structure relate to each other. The aim of Information
+										Architecture is to help users know where they are, what they have discovered, and what they can
+										anticipate. (searchstorage, 2005)</p>
+									<p> context, and users. This means that while structuring a product 's information, user
+										needs, business goals, and various types of content must be considered. Information architecture
+										design typically comes under the care of UX and UI designers or an architect of information. The
+										role of an information architect as a person who bridges users and content by designing search
+										and navigation, embodying abstract ideas into prototypes, units, and disciplines to transform the
+										concepts into something understandable, is explained by Peter Morville, co-author of
+										Information Architecture for the World Wide Web. An information architect who works with a
+										UX designer can focus exclusively on the design of information architecture, while a UX
+										designer spends more time researching. An architect produces a number of deliverables in this
+										case, which we will explain in the section on the steps of IA development. (altexsoft, 2018)</p>
+									<h2>REFERENCES</h2>
+									<p>altexsoft. (2018, December 18). Retrieved from altexsoft:
+										https://www.altexsoft.com/blog/uxdesign/how-to-create-information-architecture-for-webdesign/
+										searchstorage. (2005, September). Retrieved from searchstorage:<br>
+										https://searchstorage.techtarget.com/definition/informationarchitecture#:~:text=1%29%20In%20technical%20writing%2C%20information%20architecture%
+										20is%20the,a%20general%20way%2C%20how%20it%20should%20be%20organized.</p></br>
+									
 
 		<!-- Sidebar -->
 		<div id="sidebar">
