--- a/ZZZZZZZ.html
+++ b/ZZZZZZZ.html
@@ -30,13 +30,22 @@
 									<header class="main">
 										<h1>REFLECTION</h1>
 									</header>
-									<span class="image main"><img src="qq.jpg" alt="" /></span>
+									<span class="image main"><img src="theory.jpg" alt="" /></span>
 									<hr class="major" />
-									<h2>Group Project, Design Problem Statement, and Experience Mapping</h2>
-									<p>Our focus is all about how, through this pandemic, to earn money. How we will help students find an alternate work so that they can still acquire the items they want to help their families. To get a developed right about this initiative, we get done a lot of research that we can do and produce it as best as we can. The main reason we chose this topic is that, without doing nothing, many students have a lot of time, which is why we want to help them raise money for their future.</p>
-									<p>The first thing we do is give each other feedback to get a clear understanding about how this project could be developed. After that, we can quickly build the targets we like, etc. Even if our internet access is still not that good, we always have something that can benefit each one of us. Because of the idea that we have we can easily create a good quality of work, also having a feedback in the other group about our project that give us an idea on what we should improve about our project. </p>
-									<p>Our problem statement, the team thinks the pandemic affected the students greatly in terms of income, and students are not able to physically go to job interviews and find job opportunities. Having the internet and media as the only source of information, students try different ways to find a source of income. </p>
-
+									<h2>COLOR THEORY AND TYPOGRAPHY</h2>
+									<p>Color theory is the set of rules and instructions that programmers use of visual interfaces
+										to interact with users by pleasing color schemes. Designers use a color wheel to select the right
+										colors each time and appeal to vast collected knowledge of human optical ability, psychology,
+										history and more. Typography, layout or collection of letter types to be arranged into words and
+										phrases to be disposed of when written on a page in blocks of script.</p>
+									<p>Activity 6 deals with color and typography games, which will allow one to get more
+										acquainted with the various typography and color styles. The games we play are more likely to
+										be seen by brans, kerning game, how we identify the brand color, web style, and type war that
+										this game will help us develop our design skills, particularly when choosing a correct color on a
+										certain logo or image.</p>
+									<p>When creating a logo, pictures, typography, and color theory will help you to produce a
+										better output. Because of this you will produce a presentable output that can provide your
+										website with a valid interface that is acceptable for anyone that uses it.</p>
 		<!-- Sidebar -->
 		<div id="sidebar">
 			<div class="inner">
