--- a/ZZZZZZ.html
+++ b/ZZZZZZ.html
@@ -30,12 +30,28 @@
 									<header class="main">
 										<h1>REFLECTION</h1>
 									</header>
-									<span class="image main"><img src="qq.jpg" alt="" /></span>
+									<span class="image main"><img src="visual.jpg" alt="" /></span>
 									<hr class="major" />
-									<h2>Group Project, Design Problem Statement, and Experience Mapping</h2>
-									<p>Our focus is all about how, through this pandemic, to earn money. How we will help students find an alternate work so that they can still acquire the items they want to help their families. To get a developed right about this initiative, we get done a lot of research that we can do and produce it as best as we can. The main reason we chose this topic is that, without doing nothing, many students have a lot of time, which is why we want to help them raise money for their future.</p>
-									<p>The first thing we do is give each other feedback to get a clear understanding about how this project could be developed. After that, we can quickly build the targets we like, etc. Even if our internet access is still not that good, we always have something that can benefit each one of us. Because of the idea that we have we can easily create a good quality of work, also having a feedback in the other group about our project that give us an idea on what we should improve about our project. </p>
-									<p>Our problem statement, the team thinks the pandemic affected the students greatly in terms of income, and students are not able to physically go to job interviews and find job opportunities. Having the internet and media as the only source of information, students try different ways to find a source of income. </p>
+									<h2>Visual Information Design</h2>
+									<p>What is style with visuals? The method of presenting information in a way that makes it
+										most available and easily understood by users is based on what we have learned about during our
+										graphic design class hours. To achieve established targets, graphic design is tailored to specific
+										audiences in specific circumstances. Photography, video or audio recording, graphic arts, visual
+										aids, presentation, visual presentation products, and supporting processes would be unclouded by
+										the visual design.aZ</p>
+									<p>So let me talk about what happens during our class session, last meeting we talk about
+										how we can strengthen our editing abilities when making an invitation card and how it will look
+										presentable when the audience/participants look at it. Let me include some detail about what
+										kind of invitation we are going to make," You are cordially invited to the delectable after-dinner
+										party of Robert and Alexandra. There will be wine and nibbles served. When: At 9:30pm on June
+										30th, 2012. Where: Your pad. Ping us, if you need directions. "Please let us know if you're going
+										to join by June 1st" so this is the invitation card we need to do. So, what do we do to create an
+										invitation card that can be shown to everybody? So, we should delete the word that is not going
+										to look presentable and change it to make it look more presentable and recognized.
+										</p>
+									<p>what do i do to create an invitation card that can be shown to everybody? So I should
+										delete the word that is not going to look presentable and change it to make it look more
+										presentable and recognized.</p>
 
 		<!-- Sidebar -->
 		<div id="sidebar">
